feat(auth): implement production-grade JWT authentication with Spring Security 6
- JwtService with externalized @ConfigurationProperties (secret, access/refresh expiry)
- CustomUserDetails wrapping User entity with RecordStatus-based enabled check
- UserDetailsServiceImpl loading users by email with role JOIN FETCH
- RefreshTokenService with SHA-256 hashing and token rotation
- AuthService orchestrating signup, login, refresh, logout with audit logging
- AuthController exposing 4 public endpoints under /api/v1/auth
- CustomAuthenticationEntryPoint (401) and CustomAccessDeniedHandler (403) returning JSON
- JwtAuthenticationFilter extracting Bearer tokens and populating SecurityContext
- SecurityConfig with CORS hardening, security headers, stateless sessions
- CurrentUserService implementing AuditorAware for JPA auditing
- @StrongPassword custom validator (8+ chars, upper/lower/digit/special)
- V19__seed_roles.sql seeding ADMIN, ASSET_MANAGER, DEPT_HEAD, EMPLOYEE
- Added JJWT 0.12.6 dependencies